# parsec.py

./: .gitignore  pyproject.toml  setup.py
src/parsec/: __init__.py  __init__.pyi
